--- a/Invessence/modules/web/src/main/webapp/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/demo.xhtml
@@ -40,6 +40,16 @@
                         </p:commandLink>
 
                         <div class="EmptyBox10"></div>
+                        <p:commandLink actionListener="#{sessionControl.emulateClient('www.buildingbenjamins.com')}">
+                            <h:graphicImage name="images/logo/BuildingBenjamins-identity.png" library="invessence"
+                                            class="MarAuto MarTop5 MarBot5 selectClientInv" id="bbdemo" style="height: 65px"/>
+                        </p:commandLink>
+                        <div class="EmptyBox10"></div>
+                        <p:commandLink actionListener="#{sessionControl.emulateClient('uob.invessence.com:8080')}">
+                            <h:graphicImage name="images/logo/uobkh.png" library="invessence"
+                                            class="MarAuto MarTop5 MarBot5 selectClientInv" id="ubodemo" style="height: 60px"/>
+                        </p:commandLink>
+                        <div class="EmptyBox10"></div>
                         <div class="Container50">
                             <div class="Wid100">Rep</div>
                             <p:selectOneMenu value="#{sessionControl.rep}"
@@ -62,18 +72,8 @@
                         </div>
 
 
-                        <div class="EmptyBox10"></div>
-                        <p:commandLink actionListener="#{sessionControl.emulateClient('www.buildingbenjamins.com')}">
-                            <h:graphicImage name="images/logo/BuildingBenjamins-identity.png" library="invessence"
-                                            class="MarAuto MarTop5 MarBot5 selectClientInv" id="bbdemo" style="height: 65px"/>
-                        </p:commandLink>
-                        <div class="EmptyBox10"></div>
-                        <p:commandLink actionListener="#{sessionControl.emulateClient('uob.invessence.com:8080')}">
-                            <h:graphicImage name="images/logo/uobkh.png" library="invessence"
-                                            class="MarAuto MarTop5 MarBot5 selectClientInv" id="ubodemo" style="height: 60px"/>
-                        </p:commandLink>
                         <div class="EmptyBox20"></div>
-                        <p:button  value="GetStarted" styleClass="Fs16 BlueButton" href="/getstarted.xhtml?rep=#{sessionControl.rep}&vid=#{sessionControl.visitorID}"></p:button>
+                        <p:button  value="GetStarted" styleClass="Fs16 BlueButton" href="/getstarted.xhtml?rep=#{sessionControl.rep}&amp;vid=#{sessionControl.visitorID}"></p:button>
                         <p:button  value="Login" styleClass="Fs16 OrangeButton" href="/"></p:button>
                         <p:commandButton  value="Reset" styleClass="Fs16 OrangeButton" actionListener="#{sessionControl.reset}"></p:commandButton>
                         <div class="EmptyBox50"></div>
