--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -48,7 +48,7 @@
                                                   styleClass="Wid15 Fs14 num-text-align TexAlRight"
                                                   headerText="Weight"><!-- ROHIT's CHANGE -->
                                             <h:outputText value="#{assetList.userEdit}">
-                                                <f:convertNumber pattern="##0.00%"/>
+                                                <f:convertNumber pattern="##0%"/>
                                             </h:outputText>
                                         </p:column>
                                         <p:column styleClass="Wid30 Fs14 num-text-align TexAlRight"
@@ -73,40 +73,48 @@
                             </p:outputPanel>
                         </div>
                     </div>
-                </div >
+                </div>
+                <div class="Container50 FrightForced">
+                    <div class="Container100">
+                        <div class="Container45 Res100MP TexAlCenter Fleft UI-tcm">
+                            <div class="ContainerIndent">
+                                <div class="EmptyBox5"></div>
+                                <span class="Fs14 DispBlock gray">Average Market Performance</span>
 
-                <h:inputHidden value="#{tcmpb.charts.resultChart}"
-                               id="beanValueChart1"/>
-                <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
-                    <div class="ContainerIndent">
-                        <div class="EmptyBox5"></div>
-                        <span class="Fs14 DispBlock gray">Investment Risk</span>
-                                    <span class="Fs24 DispBlock red">
-                                    <h:outputText value="#{tcmpb.totalRisk}">
-                                        <f:convertNumber pattern="##0.00%"/>
-                                    </h:outputText>
-                                   </span>
+                                <div class="EmptyBox5"></div>
+                                <span class="Fs17 DispBlock BBGreen"> <h:outputText
+                                        value="#{tcmpb.charts.chartdata.getIntChartData('AvgPerformance')}">
+                                    <f:convertNumber pattern="$#,###,###,##0"/>
+                                </h:outputText>
+                                </span>
+                            </div>
+                        </div>
 
-                        <div class="EmptyBox5"></div>
+                        <div
+                                class="Container45 Res100MP FrightForced TexAlCenter UI-tcm MarTopRes">
+                            <div class="ContainerIndent">
+                                <div class="EmptyBox5"></div>
+                                <span class="Fs14 DispBlock gray">Poor Market Performance</span>
+
+                                <div class="EmptyBox5"></div>
+                                <span class="Fs17 DispBlock BBGreen"> <h:outputText
+                                        value="#{tcmpb.charts.chartdata.getIntChartData('PoorPerformance')}">
+                                    <f:convertNumber pattern="$#,###,###,##0"/>
+                                </h:outputText>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="EmptyBox5"></div>
+
+                    <h:inputHidden value="#{tcmpb.charts.chartdata.highChartresultSet}"
+                                   id="performanceChart"/>
+
+                    <div id="progressChart" class="Fright">
+                        <!-- Build Performance Chart Here -->
                     </div>
                 </div>
-                <div class="Wid10 Fright" style="height:1px;"></div>
-                <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
-                    <div class="ContainerIndent">
-                        <div class="EmptyBox5"></div>
-                        <span class="Fs14 DispBlock gray">Expected Return</span>
-                                    <span class="Fs24 DispBlock invessenceblue">
-                                      <h:outputText value="#{tcmpb.totalExpectedReturns}">
-                                          <f:convertNumber pattern="##0.00%"/>
-                                      </h:outputText>
-                                     </span>
 
-                        <div class="EmptyBox5"></div>
-                    </div>
-                </div>
-                <div id="progressChart" class="Container50 Fright">
-                <!-- Build Performance Chart Here -->
-                </div>
             </div>
             <div class="Container100 Responsive100">
                 <div class="EmptyBox20"></div>
