--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -11,7 +11,7 @@
 					<div class="Container100" style="">
 						<div class="Wid100 uobCoreLabel">Invest for</div>
 						<p:selectOneMenu value="#{uobpb.goal}"
-							styleClass="Wid100 uob_selectDropdown" required="true">
+							styleClass="Wid100 uob_selectDropdown" >
 							<p:ajax listener="#{uobpb.onGoalChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
 							<f:selectItem itemLabel="Choose One" itemValue="" />
@@ -45,5 +45,18 @@
                         update=":ceForm:workArea, :ceForm:graphArea"/>
 						</p:inputNumber>
 					</div>
-
+	<p:panel rendered="#{uobpb.pagemanager.getErrorMessage(0) != null }"
+			 style="border: 0px; background: transparent"
+			 styleClass="Container100">
+		<h:outputText styleClass="errorText"
+					  value="#{uobpb.pagemanager.getErrorMessage(0)}" escape="false"/>
+		<div class="EmptyBox5"></div>
+	</p:panel>
+	<p:panel rendered="#{uobpb.pagemanager.getErrorMessage(1) != null }"
+			 style="border: 0px; background: transparent"
+			 styleClass="Container100">
+		<h:outputText styleClass="errorText"
+					  value="#{uobpb.pagemanager.getErrorMessage(1)}" escape="false"/>
+		<div class="EmptyBox5"></div>
+	</p:panel>
 </ui:composition>
