--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -56,4 +56,18 @@
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
 				</p:inputNumber>
 			</div>
+	<p:panel rendered="#{uobpb.pagemanager.getErrorMessage(2) != null }"
+			 style="border: 0px; background: transparent"
+			 styleClass="Container100">
+		<h:outputText styleClass="errorText"
+					  value="#{uobpb.pagemanager.getErrorMessage(2)}" escape="false"/>
+		<div class="EmptyBox5"></div>
+	</p:panel>
+	<p:panel rendered="#{uobpb.pagemanager.getErrorMessage(3) != null }"
+			 style="border: 0px; background: transparent"
+			 styleClass="Container100">
+		<h:outputText styleClass="errorText"
+					  value="#{uobpb.pagemanager.getErrorMessage(3)}" escape="false"/>
+		<div class="EmptyBox5"></div>
+	</p:panel>
 </ui:composition>
