--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -6,57 +6,61 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100">
-						<span class="Fs30">Overview</span>
-					</div>
-					<div class="Container100" style="">
-						<div class="Wid100 uobCoreLabel">Invest for</div>
-						<p:selectOneMenu value="#{uobpb.goal}"
-							styleClass="Wid100 uob_selectDropdown" >
-							<p:ajax listener="#{uobpb.onGoalChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
-							<f:selectItem itemLabel="Choose One" itemValue="" />
-							<f:selectItem itemLabel="Retirement" itemValue="Retirement" />
-							<f:selectItem itemLabel="College" itemValue="College" />
-							<f:selectItem itemLabel="Building Wealth" itemValue="Wealth" />
-							<f:selectItem itemLabel="Other" itemValue="Other" />
-						</p:selectOneMenu>
+        <span class="Fs30">Overview</span>
+    </div>
+    <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(0) != null }"
+             style="margin-top: 7px;border: 0px; background: transparent"
+             styleClass="Container100">
+        <h:outputText styleClass="errorText"
+                      value="#{uobpb.pagemanager.getErrorMessage(0)}" escape="false"/>
 
-						<div class="Wid100 uobCoreLabel">Your current age</div>
-						<p:inputNumber value="#{uobpb.age}"
-                           min="18" max="100"
-                           maxlength="5" decimalPlaces="0">
-                <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
-            </p:inputNumber>
+        <div class="EmptyBox5"></div>
+    </p:panel>
+    <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(1) != null }"
+             style="border: 0px; background: transparent"
+             styleClass="Container100">
+        <h:outputText styleClass="errorText"
+                      value="#{uobpb.pagemanager.getErrorMessage(1)}" escape="false"/>
+        <div class="EmptyBox5"></div>
+    </p:panel>
 
-						<div class="Wid100 uobCoreLabel">How long do you plan to
-							invest?</div>
-						<p:inputNumber value="#{uobpb.horizon}" min="1" max="20"
-							styleClass="Wid100" maxlength="5" decimalPlaces="0">
-				<p:ajax event="blur" listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
-						</p:inputNumber>
+    <div class="Container100" style="">
+        <div class="Wid100 uobCoreLabel">Invest for</div>
+        <p:selectOneMenu value="#{uobpb.goal}"
+                         styleClass="Wid100 uob_selectDropdown">
+            <p:ajax listener="#{uobpb.onGoalChangeValue}"
+                    update=":ceForm:workArea, :ceForm:graphArea"/>
+            <f:selectItem itemLabel="Choose One" itemValue=""/>
+            <f:selectItem itemLabel="Retirement" itemValue="Retirement"/>
+            <f:selectItem itemLabel="College" itemValue="College"/>
+            <f:selectItem itemLabel="Building Wealth" itemValue="Wealth"/>
+            <f:selectItem itemLabel="Other" itemValue="Other"/>
+        </p:selectOneMenu>
 
-						<div class="Wid100 uobCoreLabel">Initial investment</div>
-						<p:inputNumber styleClass="Wid100 uob_investAmount"
-							value="#{uobpb.initialInvestment}" maxlength="11"
-							decimalPlaces="0" symbol="$">
-							<p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
-						</p:inputNumber>
-					</div>
-	<p:panel rendered="#{uobpb.pagemanager.getErrorMessage(0) != null }"
-			 style="border: 0px; background: transparent"
-			 styleClass="Container100">
-		<h:outputText styleClass="errorText"
-					  value="#{uobpb.pagemanager.getErrorMessage(0)}" escape="false"/>
-		<div class="EmptyBox5"></div>
-	</p:panel>
-	<p:panel rendered="#{uobpb.pagemanager.getErrorMessage(1) != null }"
-			 style="border: 0px; background: transparent"
-			 styleClass="Container100">
-		<h:outputText styleClass="errorText"
-					  value="#{uobpb.pagemanager.getErrorMessage(1)}" escape="false"/>
-		<div class="EmptyBox5"></div>
-	</p:panel>
+        <div class="Wid100 uobCoreLabel">Your current age</div>
+        <p:inputNumber value="#{uobpb.age}"
+                       min="18" max="100"
+                       maxlength="5" decimalPlaces="0">
+            <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
+                    update=":ceForm:workArea, :ceForm:graphArea"/>
+        </p:inputNumber>
+
+        <div class="Wid100 uobCoreLabel">How long do you plan to
+            invest?
+        </div>
+        <p:inputNumber value="#{uobpb.horizon}" min="1" max="20"
+                       styleClass="Wid100" maxlength="5" decimalPlaces="0">
+            <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
+                    update=":ceForm:workArea, :ceForm:graphArea"/>
+        </p:inputNumber>
+
+        <div class="Wid100 uobCoreLabel">Initial investment</div>
+        <p:inputNumber styleClass="Wid100 uob_investAmount"
+                       value="#{uobpb.initialInvestment}" maxlength="11"
+                       decimalPlaces="0" symbol="$">
+            <p:ajax listener="#{uobpb.onChangeValue}"
+                    update=":ceForm:workArea, :ceForm:graphArea"/>
+        </p:inputNumber>
+    </div>
+
 </ui:composition>
