--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
@@ -9,6 +9,20 @@
 
     <div class="Container100 Responsive50">
         <div class="ContainerIndent">
+            <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(4) != null }"
+                     style="margin-bottom:7px;border: 0px; background: transparent"
+                     styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                              value="#{uobpb.pagemanager.getErrorMessage(4)}" escape="false"/>
+                <div class="EmptyBox5"></div>
+            </p:panel>
+            <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(3) != null }"
+                     style="border: 0px; background: transparent"
+                     styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                              value="#{uobpb.pagemanager.getErrorMessage(3)}" escape="false"/>
+                <div class="EmptyBox5"></div>
+            </p:panel>
             <h5>
                 7. What is your long-term investment intention?
             </h5>
@@ -24,20 +38,7 @@
             </p:selectOneRadio>
         </div>
     </div>
-        <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(4) != null }"
-                 style="border: 0px; background: transparent"
-                 styleClass="Container100">
-            <h:outputText styleClass="errorText"
-                          value="#{uobpb.pagemanager.getErrorMessage(4)}" escape="false"/>
-            <div class="EmptyBox5"></div>
-        </p:panel>
-        <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(3) != null }"
-                 style="border: 0px; background: transparent"
-                 styleClass="Container100">
-            <h:outputText styleClass="errorText"
-                          value="#{uobpb.pagemanager.getErrorMessage(3)}" escape="false"/>
-            <div class="EmptyBox5"></div>
-        </p:panel>
+
     </p:panel>
 
 
