--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -8,19 +8,12 @@
     <div class="Container100">
         <span class="Fs30">Overview</span>
     </div>
-    <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(0) != null }"
+    <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
              style="margin-top: 7px;border: 0px; background: transparent"
              styleClass="Container100">
         <h:outputText styleClass="errorText"
-                      value="#{uobpb.pagemanager.getErrorMessage(0)}" escape="false"/>
+                      value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
 
-        <div class="EmptyBox5"></div>
-    </p:panel>
-    <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(1) != null }"
-             style="border: 0px; background: transparent"
-             styleClass="Container100">
-        <h:outputText styleClass="errorText"
-                      value="#{uobpb.pagemanager.getErrorMessage(1)}" escape="false"/>
         <div class="EmptyBox5"></div>
     </p:panel>
 
@@ -41,7 +34,7 @@
         <p:inputNumber value="#{uobpb.age}"
                        min="18" max="100"
                        maxlength="5" decimalPlaces="0">
-            <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
+            <p:ajax listener="#{uobpb.onChangeValue}"
                     update=":ceForm:workArea, :ceForm:graphArea"/>
         </p:inputNumber>
 
@@ -50,7 +43,7 @@
         </div>
         <p:inputNumber value="#{uobpb.horizon}" min="1" max="20"
                        styleClass="Wid100" maxlength="5" decimalPlaces="0">
-            <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
+            <p:ajax listener="#{uobpb.onChangeValue}"
                     update=":ceForm:workArea, :ceForm:graphArea"/>
         </p:inputNumber>
 
