--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -9,22 +9,15 @@
     <div class="Container100">
         <span class="Fs30">Liability</span>
     </div>
-    <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(2) != null }"
+    <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
              style="margin-top:7px; border: 0px; background: transparent"
              styleClass="Container100">
         <h:outputText styleClass="errorText"
-                      value="#{uobpb.pagemanager.getErrorMessage(2)}" escape="false"/>
+                      value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
 
         <div class="EmptyBox5"></div>
     </p:panel>
-    <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(3) != null }"
-             style="border: 0px; background: transparent"
-             styleClass="Container100">
-        <h:outputText styleClass="errorText"
-                      value="#{uobpb.pagemanager.getErrorMessage(3)}" escape="false"/>
 
-        <div class="EmptyBox5"></div>
-    </p:panel>
     <div class="Container100">
         <p:panelGrid columns="1" layout="grid" class="FormContent"
                      styleClass="Container100 Responsive100"
