--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
@@ -8,18 +8,11 @@
     <p:panel style="border: 0px">
     <div class="Container100 Responsive50">
     <div class="ContainerIndent">
-        <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(4) != null }"
-                 style="border: 0px; background: transparent"
-                 styleClass="Container100">
-            <h:outputText styleClass="errorText"
-                          value="#{uobpb.pagemanager.getErrorMessage(4)}" escape="false"/>
-            <div class="EmptyBox5"></div>
-        </p:panel>
-        <p:panel rendered="#{uobpb.pagemanager.getErrorMessage(3) != null }"
+        <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
                  style="margin-bottom:7px;border: 0px; background: transparent"
                  styleClass="Container100">
             <h:outputText styleClass="errorText"
-                          value="#{uobpb.pagemanager.getErrorMessage(3)}" escape="false"/>
+                          value="#{uobpb.pagemanager.errorMessage}" escape="false"/>
             <div class="EmptyBox5"></div>
         </p:panel>
         <h5>
